# doctolib

./: .gitignore  README.md  config.json  hello.py  pyproject.toml  run_scan_m6.sh  run_scan_p6.sh  scan.py
data/: notified.txt  slots.sample.json
hellotermux/: __main__.py  availability.py  cli.py  config.py  notify.py  storage.py
hellotermux/providers/: file_json.py  http_doctolib.py
